@@ -11,7 +11,13 @@ export(LD22)
 export(LDkl)
 export(MCMCgrm)
 export(METAL_forestplot)
+export(ReadGRM)
+export(ReadGRMBin)
+export(WriteGRM)
+export(WriteGRMBin)
+export(a2g)
 export(ab)
+export(allele.recode)
 export(asplot)
 export(b2r)
 export(bt)
@@ -27,12 +33,14 @@ export(cnvplot)
 export(comp.score)
 export(cs)
 export(fbsize)
+export(g2a)
 export(gc.em)
 export(gc.lambda)
 export(gcontrol)
 export(gcontrol2)
 export(gcp)
 export(genecounting)
+export(geno.recode)
 export(get_b_se)
 export(get_pve_se)
 export(get_sdy)
