@@ -1,0 +1,14 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utils.R
+\name{ReadGRM}
+\alias{ReadGRM}
+\title{A function to read GRM file}
+\usage{
+ReadGRM(prefix = 51)
+}
+\arguments{
+\item{prefix}{file root.}
+}
+\description{
+A function to read GRM file
+}
