@@ -1,0 +1,16 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utils.R
+\name{a2g}
+\alias{a2g}
+\title{Allele-to-genotype conversion}
+\usage{
+a2g(a1, a2)
+}
+\arguments{
+\item{a1}{first allele.}
+
+\item{a2}{second allele.}
+}
+\description{
+Allele-to-genotype conversion
+}
