@@ -1,0 +1,14 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utils.R
+\name{g2a}
+\alias{g2a}
+\title{Conversion of a genotype identifier to alleles}
+\usage{
+g2a(g)
+}
+\arguments{
+\item{g}{a genotype identifier.}
+}
+\description{
+Conversion of a genotype identifier to alleles
+}
