@@ -1,0 +1,16 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/utils.R
+\name{geno.recode}
+\alias{geno.recode}
+\title{Genotype recoding}
+\usage{
+geno.recode(geno, miss.val = 0)
+}
+\arguments{
+\item{geno}{genotype.}
+
+\item{miss.val}{missing value.}
+}
+\description{
+Genotype recoding
+}
